Better integration with librawfx including now testing in multi-threading environment Changed to librawfx 1.0.2 Some fixes for custom image loaders (refresh after image is loaded is necessary)